--- a/index.html
+++ b/index.html
@@ -2,129 +2,97 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <title>Расчёт пробега техники</title>
-  <style>
-    body { font-family: sans-serif; margin: 0; padding: 0; }
-    #controls {
-      display: flex; align-items: center; padding: 10px; background: #f5f5f5;
-    }
-    #map { width: 100%; height: 90vh; }
-    input, select, button {
-      margin-right: 10px;
-      padding: 5px;
-    }
-  </style>
-  <script src="https://api-maps.yandex.ru/2.1/?apikey=a4dfa958-611e-48ed-b292-9af517b70298&lang=ru_RU" type="text/javascript"></script>
+    <meta charset="UTF-8">
+    <title>Расчёт пробега техники</title>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=4dcad70a-93f5-4f97-b94f-8d76d832e6ad" type="text/javascript"></script>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; background: #f8f8f8; }
+        #controls { margin-bottom: 15px; display: flex; gap: 10px; }
+        #map { width: 100%; height: 500px; margin-top: 15px; }
+        input, select, button { padding: 8px; font-size: 14px; }
+    </style>
 </head>
 <body>
-  <div id="controls">
-    <input type="text" id="address" placeholder="Введите адрес назначения" />
-    <select id="category">
-      <option>Категория B</option>
-      <option>Категория C1</option>
-      <option>Категория C</option>
-    </select>
-    <button onclick="calculate()">Рассчитать</button>
-    <span id="result"></span>
-  </div>
-  <div id="map"></div>
+    <div id="controls">
+        <input type="text" id="destination" placeholder="Адрес назначения (например, СПБ, Конюшенная)" size="50">
+        <select id="category">
+            <option value="B">Категория B</option>
+            <option value="C">Категория C</option>
+        </select>
+        <button onclick="calculateBestRoute()">Рассчитать</button>
+    </div>
+    <div id="result"></div>
+    <div id="map"></div>
 
-  <script>
-    ymaps.ready(init);
-    let map, routeLine;
+    <script>
+        const BASE_POINTS = [
+            { name: 'СПБ База (Трефолева)', coords: [59.84660399, 30.29496392] },
+            { name: 'МСК Юг', coords: [55.574371, 37.6517] },
+            { name: 'МСК Север', coords: [55.874371, 37.4417] }
+        ];
 
-    const bases = {
-      "МКАД": [55.751244, 37.618423],
-      "КАД СПб": [59.934280, 30.335099],
-      "МСК ЮГ": [55.331552, 37.165565],
-      "МСК СЕВЕР": [55.913669, 37.825745],
-      "СПб": [59.855682, 30.264221]
-    };
+        const RATES = {
+            B: 35,
+            C: 50
+        };
 
-    function init() {
-      map = new ymaps.Map("map", {
-        center: [55.76, 37.64],
-        zoom: 5
-      });
+        ymaps.ready(initMap);
+        let myMap, routeLine;
 
-      for (const name in bases) {
-        map.geoObjects.add(new ymaps.Placemark(bases[name], { iconCaption: name }));
-      }
-    }
-
-    async function calculate() {
-      const address = document.getElementById("address").value;
-      const category = document.getElementById("category").value;
-
-      const toCoords = await geocode(address);
-      if (!toCoords) {
-        alert("Адрес не найден");
-        return;
-      }
-
-      map.setCenter(toCoords, 10);
-
-      // Определим ближайшую базу
-      let nearest = { name: "", coords: null, dist: Infinity };
-      for (const [name, coords] of Object.entries(bases)) {
-        const d = distance(coords, toCoords);
-        if (d < nearest.dist) {
-          nearest = { name, coords, dist: d };
+        function initMap() {
+            myMap = new ymaps.Map("map", {
+                center: [55.76, 37.64],
+                zoom: 5
+            });
         }
-      }
 
-      if (routeLine) map.geoObjects.remove(routeLine);
+        async function calculateBestRoute() {
+            const destination = document.getElementById('destination').value;
+            const category = document.getElementById('category').value;
+            if (!destination) return alert("Введите адрес назначения");
 
-      const route = await ymaps.route([nearest.coords, toCoords]);
-      routeLine = route.getPaths();
-      map.geoObjects.add(route);
+            const destCoords = await geocode(destination);
+            if (!destCoords) return alert("Не удалось геокодировать адрес");
 
-      const length = route.properties.get("distance").value / 1000;
+            let best = null;
 
-      let cost = 0;
+            for (const base of BASE_POINTS) {
+                try {
+                    const route = await ymaps.route([base.coords, destCoords]);
+                    const distance = route.getLength() / 1000;
+                    if (!best || distance < best.distance) {
+                        best = { base, route, distance };
+                    }
+                } catch (e) {
+                    console.warn("Маршрут не построен от:", base.name);
+                }
+            }
 
-      if (category === "Категория B" || category === "Категория C1") {
-        const mkadDist = distance([55.751244, 37.618423], toCoords);
-        const baseDist = nearest.name.startsWith("МСК") ? length : Infinity;
-        const compareDist = Math.min(mkadDist, baseDist);
+            if (best) {
+                myMap.geoObjects.removeAll();
+                myMap.geoObjects.add(best.route);
+                myMap.setBounds(best.route.getBounds(), { checkZoomRange: true });
 
-        if (compareDist > 81) cost = compareDist * 68;
-        else if (compareDist > 40) cost = compareDist * 52;
-        else if (compareDist > 30) cost = compareDist * 35;
-      } else if (category === "Категория C") {
-        if (nearest.name === "СПб" && nearest.dist <= 80) {
-          cost = 0;
-        } else {
-          if (length > 81) cost = length * 133;
-          else if (length > 40) cost = length * 99;
-          else if (length > 10) cost = length * 66;
+                const cost = best.distance * RATES[category];
+                document.getElementById('result').innerHTML = `
+                    <p><strong>Откуда:</strong> ${best.base.name}</p>
+                    <p><strong>Расстояние:</strong> ${best.distance.toFixed(2)} км</p>
+                    <p><strong>Стоимость:</strong> ${cost.toFixed(2)} ₽</p>
+                `;
+            } else {
+                alert("Не удалось построить маршрут от баз до назначения");
+            }
         }
-      }
 
-      document.getElementById("result").innerText =
-        `Ближайшая база: ${nearest.name}. Расстояние: ${length.toFixed(1)} км. Стоимость: ${Math.round(cost)} руб.`;
-    }
-
-    async function geocode(address) {
-      const result = await ymaps.geocode(address);
-      if (result.geoObjects.getLength()) {
-        return result.geoObjects.get(0).geometry.getCoordinates();
-      }
-      return null;
-    }
-
-    function distance(coord1, coord2) {
-      const R = 6371;
-      const dLat = (coord2[0] - coord1[0]) * Math.PI / 180;
-      const dLon = (coord2[1] - coord1[1]) * Math.PI / 180;
-      const a =
-        Math.sin(dLat / 2) ** 2 +
-        Math.cos(coord1[0] * Math.PI / 180) *
-        Math.cos(coord2[0] * Math.PI / 180) *
-        Math.sin(dLon / 2) ** 2;
-      return R * (2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a)));
-    }
-  </script>
+        async function geocode(address) {
+            try {
+                const res = await ymaps.geocode(address);
+                const coords = res.geoObjects.get(0)?.geometry?.getCoordinates();
+                return coords || null;
+            } catch (e) {
+                return null;
+            }
+        }
+    </script>
 </body>
 </html>
